force-app/main/default/objects/trailheadapp__Trailhead_User__c/trailheadapp__Trailhead_User__c.object-meta.xml
<CustomObject>
    <label>Trailhead User</label>
    <nameField>
        <label>Trailhead User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trailhead Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>