force-app/main/default/objects/trailheadapp__Trailhead_User__c/fields/trailheadapp__Completed__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__Completed__c</fullName>
    <label>Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>