force-app/main/default/objects/trailheadapp__Trailhead_User__c/fields/trailheadapp__In_Progress__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__In_Progress__c</fullName>
    <label>In Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>