force-app/main/default/objects/trailheadapp__Trailhead_User__c/fields/trailheadapp__Leaderboards__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__Leaderboards__c</fullName>
    <label>Leaderboards</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Hackday</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>