force-app/main/default/objects/trailheadapp__Trailhead_User__c/fields/trailheadapp__Profile_Visibility__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__Profile_Visibility__c</fullName>
    <label>Profile Visibility</label>
    <length>100</length>
    <type>Text</type>
</CustomField>