force-app/main/default/objects/trailheadapp__Trailhead_User__c/fields/trailheadapp__Total_Points__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__Total_Points__c</fullName>
    <label>Total Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>